# stare_pet

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  stare  stare-docker
.github/workflows/: docs_pages_workflow.yml
debugging/: assess_clipping_effect_on_clustering.py  assess_clustering.py  make_stare_movies.sh
docs/: .gitignore  autodoc.rst  build_docs.sh  changelog.rst  classes.rst  command_line_options.rst  conf.py  index.rst  stare.rst  starelib.rst
examples/: adhoc_01_custom_tac_plot.ipynb  adhoc_debug_resampling_and_affines.ipynb  adhoc_matlab_vs_python_comparison.ipynb  adhoc_review_cluster_tacs_by_class.ipynb  clust_er176  dev_01_description_of_stare.ipynb  wrapper_stare.ipynb
examples/comparing_clusters/: adhoc_catalog_stability_runs.ipynb
src/: clust_er176  stare  stare.py  stare_app.py  util.py  vasc_clust_er176
src/scripts/: view_in_fsleyes.sh
src/stare_pet/: stare_app.py
src/stare_pet/starelib/: boot_anchor.py  centroid_heuristics.py  clustering.py  colors.py  components.py  er176_wrapper.py  fit_mean_tac.py  fitting_models.py  loader.py  minimize_cost.py  mp_queues.py  partial_volume.py  plotting.py  rendering.py  report.py  results.py  stare_results.py  stare_wrapper.py  timeactivitycurve.py  util.py  vascular_correction.py
src/starelib/: boot_anchor.py  centroid.py  centroid_heuristics.py  clustering.py  colors.py  components.py  er176_wrapper.py  error.py  fit_mean_tac.py  fitting_models.py  loader.py  minimize_cost.py  mp_queues.py  partial_volume.py  plotting.py  report.py  results.py  stare_results.py  stare_wrapper.py  timeactivitycurve.py  util.py  vascular_cluster.py  vascular_correction.py  wrapper.py
starelib/: __init__.py  plotting.py  util.py  vascular_cluster.py  wrapper.py
