[metadata]
name = stare_pet
version = 0.0.1
author = Mike Schmidt
author_email = mikeschmidt@schmidtgracen.com
description = A python implementation of Source-to-Target Automatic Rotating Estimation (STARE)
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/mfschmidt/stare_pet/
project_urls =
    Source = https://github.com/mfschmidt/stare_pet/
    Bug Tracker = https://github.com/mfschmidt/stare_pet/issues/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    = .
packages = find:
python_requires = >= 3.6
scripts =
    bin/stare
install_requires =
    numpy
    pandas
    nibabel

[options.packages.find]
where = .
