[metadata]
name = stare_pet
version = 0.6.2
author = Mike Schmidt
author_email = mikeschmidt@schmidtgracen.com
maintainer = Mike Schmidt
maintainer_email = mikeschmidt@schmidtgracen.com
description = A python implementation of Source-to-Target Automatic Rotating Estimation (STARE)
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/mfschmidt/stare_pet/
project_urls =
    Source = https://github.com/mfschmidt/stare_pet/
    Bug Tracker = https://github.com/mfschmidt/stare_pet/issues/
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux
    Environment :: Console

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8
scripts =
    src/stare
    src/clust_er176
install_requires =
    numpy
    pandas
    nibabel
    nilearn
    humanize
    scikit-learn
    matplotlib
    seaborn

[options.packages.find]
where = src
